# DM

./: CMakeLists.txt  README.md  c-cnc23.code-workspace  data.txt  log.txt  machine.ini  mosquitto.h.html  new.gcode  new.txt  notes.txt  plot.txt  plot_axis.m  test.gcode  tmp.txt  todo.txt
MATLAB/: Cartesian3DPrinter.m  sm_3d_printer.slx  sm_3d_printer.slxc
MATLAB/SingleAxisExample/: single_axis.slx  single_axis.slxc
MATLAB/SingleAxisExample/marco/: simple_axis.m  simple_axis_sim.slx  simple_axis_sim.slxc
MATLAB/slprj/_jitprj/: jitEngineAccessInfo.mat  sYjvhJ3HiwEs6c3tfJIZJcF.l  sYjvhJ3HiwEs6c3tfJIZJcF.mat
block main results/: data.csv  tempi.txt  test.m
examples/: CMakeLists.txt
examples/include/: include_guards.h  pid_controller.h  queue.h
examples/src/: 13_queue.c  14_pid.c  2_basics.c  4_include_guards.c  5_struct_union.c  6_inout_p.c  fsm.c  fsm_old.c  pid_controller.c  queue.c
exercises/: CMakeLists.txt  new.gcode  test.gcode  todo.txt
exercises/src/: exercise1.c  exercise2.c
my_examples/: CMakeLists.txt
my_examples/src/: 3_file.c  7_linkedlist.c  9_timed.c  inout.c
notes/: notes-03-30-2023.txt  notes-04-05-2023.txt  notes-04-12-2023.txt  notes-04-13-2023.txt  notes-04-20-2023.txt  notes-05-03-2023.txt  notes-05-11-2023.txt  notes-05-18-2023.txt  notes-05-24-2023.txt  ntoes-05-25-2023.txt
src/: 0_hello.c  1_basics.c  6_inout_p.c  9_timed.c  block.c  block.h  defines.h  defines.h.in  fsm.c  fsm.dot  fsm.h  machine.c  machine.h  point.c  point.h  program.c  program.h
src/main/: c-cnc.c  ccnc.c
(+16 files in other folders)
